--- a/SolarCoffe.Web/SolarCoffe.Web.csproj
+++ b/SolarCoffe.Web/SolarCoffe.Web.csproj
@@ -1,8 +1,15 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
-
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
-
-
+  <ItemGroup>
+    <ProjectReference Include="..\SolarCoffe.Data\SolarCoffe.Data.csproj"/>
+  </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.1.6"/>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="3.1.6"/>
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.1.6"/>
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.3"/>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.6"/>
+  </ItemGroup>
 </Project>
