--- a/SolarCoffee.Services/SolarCoffee.Services.csproj
+++ b/SolarCoffee.Services/SolarCoffee.Services.csproj
@@ -1,5 +1,9 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
+  <ItemGroup>
+    <ProjectReference Include="..\SolarCoffe.Data\SolarCoffe.Data.csproj" />
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
